--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="button__list mt-10">
                     <div class="row">
                         <div class="col col-lg-6 mt-10">
-                            <a href="https://m.me/HQuan0312" target="_blank">
+                            <a href="https://m.me/tuilamonbeo/" target="_blank">
                                 <div class="button button__message ">
                                     <span> Nhắn Tin </span>
                                 </div>
