--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>I am a developer </p>
+                        <p>I AM A DEVELOPER AND PHOTOGRAPHER </p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
